# src/modules/courses/models/Course.entity.ts
@@ -2,7 +2,6 @@ import { ApiProperty } from '@nestjs/swagger';
 import { ObjectType, Field, ID } from '@nestjs/graphql';
 import { Type } from 'class-transformer';
 import { University } from '../../universities/models/University.entity';
-import { Discipline } from '../../disciplines/models/Discipline.entity';
 import { Translation } from '../../translations/models/Translation.entity';
 import { Module } from '../../modules/models/Module.entity';
 import { Block } from 'src/modules/blocks/models/Block.entity';
@@ -22,17 +21,9 @@ export class Course {
   @ApiProperty()
   universityId!: string;
 
-  @Field()
-  @ApiProperty()
-  disciplineId!: string;
-
   @Field(() => University, { nullable: true })
   @ApiProperty({ type: () => University, required: false })
   university?: University;
-
-  @Field(() => Discipline, { nullable: true })
-  @ApiProperty({ type: () => Discipline, required: false })
-  discipline?: Discipline;
 
   @Field(() => [Module], { nullable: true })
   @ApiProperty({ type: () => [Module], required: false })
